--- a/src/scss/cats.scss
+++ b/src/scss/cats.scss
@@ -1,7 +1,7 @@
 @import "d3";
-@import url('https://fonts.googleapis.com/css?family=Lato:100,200,300,400,500,600');
-@import url('https://fonts.googleapis.com/css?family=Monoton:100,200,300,400,500,600');
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600');
+//@import url('https://fonts.googleapis.com/css?family=Lato:100,200,300,400,500,600');
+//@import url('https://fonts.googleapis.com/css?family=Monoton:100,200,300,400,500,600');
+//@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600');
 @import "bootstrap";
 @import "customVariables";
 @import "custom";
